# aws-sso-keepalive

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aws_sso_keepalive/: __init__.py  cli.py  notify.py  refresh.py  service.py
tests/: test_refresh.py
